# serial_bridge

./: CMakeLists.txt  README.md  package.xml
script/: serial_node.py
