<?xml version="1.0"?>
<package>
  <name>serial_bridge</name>
  <version>0.6.0</version>
  <description>The serial_bridge package
    This Package provides a common interface for controlling generic devices from 
    Serial communication.
  </description>
  <maintainer email="ludovico.russo@polito.it">Ludovico O. Russo</maintainer>
  <author email="ludovico.russo@polito.it">Ludovico O. Russo</author>
  <license>GPLv2</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  </package>
